force-app/main/default/objects/Contact/fields/Agent_Servicing_Code__c.field-meta.xml
<CustomField>
    <fullName>Agent_Servicing_Code__c</fullName>
    <label>Agent Servicing Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>