force-app/main/default/objects/Contact/fields/Complaint_Probability__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Probability__c</fullName>
    <label>Complaint Probability</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>