force-app/main/default/objects/Contact/fields/Emoticon_Customer_Mood__c.field-meta.xml
<CustomField>
    <fullName>Emoticon_Customer_Mood__c</fullName>
    <formula>IMAGE(
        CASE(
            TEXT(Last_Case__r.General_Attitude__c),
            &quot;Happy&quot;, &quot;/resource/emo_5&quot;,
            &quot;Normal&quot;, &quot;/resource/emo_3&quot;,
            &quot;Angry&quot;, &quot;/resource/emo_1&quot;,
            &quot;/resource/emo_3&quot;
        ),
        &quot;Customer Mood&quot;,
        100,
        100
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Emoticon Customer Mood</label>
    <type>Text</type>
</CustomField>