force-app/main/default/objects/Contact/recordTypes/Contact_AGI.recordType-meta.xml
<RecordType>
    <fullName>Contact_AGI</fullName>
    <active>true</active>
    <label>Contact AGI</label>
    <!---->
</RecordType>