force-app/main/default/objects/Contact/recordTypes/Contact_ALI.recordType-meta.xml
<RecordType>
    <fullName>Contact_ALI</fullName>
    <active>true</active>
    <label>Contact ALI</label>
    <!---->
</RecordType>