force-app/main/default/objects/Contact/recordTypes/Contact_Health.recordType-meta.xml
<RecordType>
    <fullName>Contact_Health</fullName>
    <active>true</active>
    <label>Contact Health</label>
    <!---->
</RecordType>