force-app/main/default/objects/Contact/listViews/AMFS.listView-meta.xml
<ListView>
    <fullName>AMFS</fullName>
    <columns>FULL_NAME</columns>
    <columns>Policy_No__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Entity__c</columns>
    <columns>PolicyApp__c</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Entity__c</field>
        <operation>equals</operation>
        <value>AMFS</value>
    </filters>
    <label>AMFS</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinatesInternal>AMFS_CEO</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>